--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <h1>JaeStarter</h1>
+    <p>
+      <%= link_to 'Sign Up', new_user_path %>
+    </p>
     <%= yield %>
   </body>
 </html>
