Add user signup feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   <body>
     <h1>JaeStarter</h1>
     <p>
-      <%= link_to 'Sign Up', new_user_path %>
+      <% if logged_in? %>
+        Welcome, <%= link_to current_user.name, current_user %>
+      <% else %>
+        <%= link_to 'Sign Up', new_user_path %>
+      <% end %>
     </p>
     <%= yield %>
   </body>
