--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <% if logged_in? %>
         Welcome, <%= link_to current_user.name, current_user %>
       <% else %>
-        <%= link_to 'Sign Up', new_user_path %>
+        <%= link_to 'Sign Up', new_user_path %> | <%= link_to 'Log In', new_session_path %>
       <% end %>
     </p>
     <%= yield %>
